welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:2: error: not enough arguments for method in3040: (c: Int, b: Int)Boolean.
Unspecified value parameter b.
	if ( in3040(a) && in3040 (b)){
                   ^in3050:5: error: not enough arguments for method in4050: (c: Int, b: Int)Boolean.
Unspecified value parameter b.
		if ( in4050(a) && in4050(b)){
                           ^