welcome.lessons.welcome.bat.bool1.In3050.scala.code
def in3050(a:Int, b:Int):Boolean = {
	if ( in3040(a) && in3040 (b)){
		return true;
	}else{
		if ( in4050(a) && in4050(b)){
			return true;
		}else{
			return false;
		}
	}
}





def in3040(c:Int , b:Int):Boolean = {
	if (c == 30){
		return true;
	}else{
		if (c == 40){
			return true;
		}else{
			if( c<40 && c>30){
				return true;
			}else{
				return false;
			}
		}
	}
}




def in4050(c:Int , b:Int):Boolean = {
	if (c == 40){
		return true;
	}else{
		if (c == 50){
			return true;
		}else{
			if( c<50 && c>40){
				return true;
			}else{
				return false;
			}
		}
	}
}
